Refactored creating a winepoup into a service class. Visual improvements to homescreen.